--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-<div class="container vh-100 d-flex"">
+<div class="container vh-100 d-flex login-form">
     <div class="row align-items-center justify-content-center flex-fill">
         <div class="col-md-3 col-lg-6">
             <h2>Home Guard</h2>
